setting git on cmd

--- a/src/styles.css
+++ b/src/styles.css
@@ -46,7 +46,7 @@ body {
 }
 
 .box:first-child {
-  background: url("https://image.tmdb.org/t/p/original/unvIX7YbLJrMtZsiijj5tDnKrP.jpg");
+  background: url("https://images-na.ssl-images-amazon.com/images/I/71d-53%2BeM0L._SY550_.jpg");
   background-size: 100% 500px;
 }
 
