--- a/src/styles.css
+++ b/src/styles.css
@@ -8,13 +8,22 @@ body {
   background-color: black;
 }
 
+.coverflow {
+  z-index: 2;
+  position: relative;
+  top: -200px;
+}
+.video__list--title {
+  color: white;
+  font-size: 20px;
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
 .js-video__list {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: 400px;
+  grid-template-rows: 500px;
   grid-gap: 20px;
-  /* position: absolute;
-  bottom: 100px; */
 }
 
 .box {
@@ -34,4 +43,29 @@ body {
 
 .previous {
   transform: translateX(-40px);
+}
+
+.box:first-child {
+  background: url("https://image.tmdb.org/t/p/original/unvIX7YbLJrMtZsiijj5tDnKrP.jpg");
+  background-size: 100% 500px;
+}
+
+.box:nth-child(2) {
+  background: url("http://post.phinf.naver.net/MjAxNzA5MjVfMTM4/MDAxNTA2MzE4MDgxMzk1.h4ZWfvOrzZYAYCz7wByg22qpJJAt3iOd1gtqJbGXXuQg.ck_qX938ZScyfo7D4NXxULd7wmsFS2NVsVuaLAXbwdcg.JPEG/IxBnm9lfNkRqLJetRWfr93AhVF6k.jpg");
+  background-size: 100% 500px;
+}
+
+.box:nth-child(3) {
+  background: url("https://images-na.ssl-images-amazon.com/images/I/61MBChdIWZL._SL1023_.jpg");
+  background-size: 100% 500px;
+}
+
+.box:nth-child(4) {
+  background: url("http://www.impawards.com/2013/posters/her.jpg");
+  background-size: 100% 500px;
+}
+
+.box:nth-child(5) {
+  background: url("http://cafefiles.naver.net/20121029_126/leeyoongi_13514646141730CLTe_JPEG/2.jpg");
+  background-size: 100% 500px;
 }
