--- a/src/css/header.css
+++ b/src/css/header.css
@@ -3,16 +3,20 @@
   position: fixed;
   width: 100%;
   height: 70px;
-  color: white;
-  font-weight: 400;
+  color: black;
+  font-weight: 600;
   background-color: transparent;
-  transition: background-color 0.5s linear;
+  transition: all 0.5s linear;
 }
 
 .black {
   background-color: black;
+  color: white;
 }
 
+.black .header__searchbar button {
+  color: white;
+}
 .header__top {
   display: grid;
   grid-template-columns: 1fr 4fr 2fr;
@@ -41,13 +45,53 @@
   margin-right: 20px;
 }
 
-.header__icons {
+.header__nav {
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 14px;
 }
 
-.header__icons div {
+.header__nav div {
   margin: 0 20px;
+}
+
+.header__searchbar button {
+  -webkit-appearance: none;
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  transition: all 0.5s linear;
+}
+
+.header__searchbar button:focus {
+  outline: inherit;
+}
+
+.js-searchBox {
+  width: 200px;
+  height: 20px;
+  background: rgba(0, 0, 0, 0.5);
+  border: 0;
+  color: white;
+  transition: all 0.5s linear;
+  border-radius: 5px;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 1) inset;
+  text-indent: 5px;
+}
+
+.js-searchBox:focus {
+  outline: none;
+}
+.js-searchBox::placeholder {
+  color: transparent;
+}
+
+.black input {
+  background-color: white;
+  color: black;
+  box-shadow: 1px 1px 1px rgba(80, 85, 92, 0.7) inset;
+}
+.black .search-box::placeholder {
+  color: black;
 }
