--- a/src/css/range.css
+++ b/src/css/range.css
@@ -14,7 +14,7 @@ input[type="range"]::-webkit-slider-runnable-track {
   cursor: pointer;
   animate: 0.2s;
   box-shadow: 1px 1px 1px rgba(80, 85, 92, 0.7) inset;
-  background: rgba(80, 85, 92, 0.3);
+  background: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
   border: 0px solid #000000;
 }
@@ -30,6 +30,6 @@ input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   margin-top: -3px;
 }
-input[type="range"]:focus::-webkit-slider-runnable-track {
+input[type="range"]:active::-webkit-slider-runnable-track {
   background: rgba(80, 85, 92, 0.5);
 }
